--- a/public/style.css
+++ b/public/style.css
@@ -79,3 +79,14 @@ p{
 .tienda ul li{
 	padding: 15px 10px;
 }
+.producto{
+	text-align: center;
+}
+.producto img{
+	height: 340px;
+}
+input{
+	border: solid 2px grey;
+    padding: 3px 4px;
+    margin: 4px 0px;
+}
