--- a/public/style.css
+++ b/public/style.css
@@ -5,6 +5,15 @@
 body {
 	font-family: helvetica;
 }
+.background{
+	background-image: url(/img/background.jpg);
+	width: 100%;
+	position: fixed;
+	z-index: -1;
+	height: 100%;
+	opacity: 0.4;
+	bottom: 0px;
+}
 .container {
 	margin: 0 auto;
 	width: 1200px;
@@ -59,6 +68,7 @@ footer em{
 	border-top: solid 30px grey;
 	margin:16px 0px;
 	padding: 20px;
+	background-color: white;
 }
 .panel-heading{
 	padding-bottom: 30px;
