--- a/public/style.css
+++ b/public/style.css
@@ -5,15 +5,6 @@
 body {
 	font-family: helvetica;
 }
-.background{
-	background-image: url(/img/background.jpg);
-	width: 100%;
-	position: fixed;
-	z-index: -1;
-	height: 100%;
-	opacity: 0.4;
-	bottom: 0px;
-}
 .container {
 	margin: 0 auto;
 	width: 1200px;
@@ -46,7 +37,7 @@ nav ul li a.active {
 	background-color: red;
 }
 
-footer{
+footer {
 	background-color: #880000;
 	width: 100%;
 	position: fixed;
@@ -54,7 +45,7 @@ footer{
 	margin: 0;
 	text-align: center;
 }
-footer em{
+footer em {
 	font-weight: 600;
 	display: block;
 	color: white;
@@ -63,40 +54,57 @@ footer em{
 	text-decoration: none;
 }
 
-.panel{
+.panel {
 	border: solid 2px grey;
 	border-top: solid 30px grey;
-	margin:16px 0px;
+	margin: 16px 0px;
 	padding: 20px;
 	background-color: white;
 }
-.panel-heading{
+.panel-heading {
 	padding-bottom: 30px;
 }
 
-p{
-	padding:10px 0px;
+p {
+	padding: 10px 0px;
 }
-.red-text{
-	color:red;
+.red-text {
+	color: red;
 }
-.green-text{
-	color:green;
+.green-text {
+	color: green;
 }
-.tienda ul{
+.tienda ul {
 	margin-left: 20px;
 }
-.tienda ul li{
+.tienda ul li {
 	padding: 15px 10px;
 }
-.producto{
+.producto {
 	text-align: center;
 }
-.producto img{
+.producto img {
 	height: 340px;
 }
-input{
+input {
 	border: solid 2px grey;
-    padding: 3px 4px;
-    margin: 4px 0px;
+	padding: 3px 4px;
+	margin: 4px 0px;
+	font-size: 16px;
+}
+input.long{
+	width: 300px;
+}
+
+button {
+	cursor:pointer;
+	background-color: rgba(255,127,0,1);
+	border: none;
+	color: white;
+	padding: 15px 32px;
+	text-align: center;
+	text-decoration: none;
+	display: inline-block;
+	font-size: 16px;
+	font-weight: bold;
 }
